--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,6 @@
   ],
   "routes": [
     { "handle": "filesystem" },
-    { "src": "/.*", "dest": "build/index.html" }
-  ],
-  "outputDirectory": "dist" // Specify the output directory here
+    { "src": "/.*", "dest": "/index.html" }
+  ]
 }
