--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,5 @@
-{
-  "version": 2,
-  "builds": [
-    {
-      "src": "build/",
-      "use": "@vercel/static-build"
-    }
-  ],
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index.html" }
+{ 
+  "rewrites": [
+   { "source": "/(.*)", "destination": "/"}
   ]
 }
